Test/Files/Parser/FullParserTestCases/Bad/FullTests/Out/testcase00_13.out
<Type> ::= int
<Expr> ::= Integer
<Stmt> ::= <Type> ID = <Expr> ;
<Type> ::= int
<Expr> ::= Integer
<Stmt> ::= <Type> ID = <Expr> ;
<Type> ::= ID
<Expr> ::= new ID ( )
<Stmt> ::= <Type> ID = <Expr> ;
Parse error on line 15:
... new Euclid();		gcd.init(a, b);				Sy
----------------------^
Expecting '=', 'ID'